# engine

./: .gitignore  CMakeLists.txt  README.md  engine.code-workspace  game.json
include/: Arch.hpp  ArchBufferPool.hpp  ArchManager.hpp  Bin.hpp  Component.hpp  ComponentInfo.hpp  ComponentManager.hpp  Concepts.hpp  Config.hpp  Engine.hpp  Entity.hpp  EventManager.hpp  GameObject.hpp  GameObjectComponent.hpp  GameObjectManager.hpp  Hash.hpp  LockFreeQueue.hpp  Logger.hpp  Material.hpp  PersistentAllocator.hpp  PersistentVector.hpp  RenderSystem.hpp  Renderer.hpp  Resource.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  Script.hpp  ScriptManager.hpp  Shader.hpp  SpriteRenderer.hpp  SubSystem.hpp  Task.hpp  TaskScheduler.hpp  TaskWaitList.hpp  TextResource.hpp  Texture.hpp  TraceException.hpp  Transform.hpp  TransformComponent.hpp  (+4 more)
include/js/: Class.hpp  Component.hpp  Console.hpp  EngineModule.hpp  EngineNamespace.hpp  Env.hpp  Format.hpp  Game.hpp  GameObject.hpp  Helpers.hpp  Material.hpp  ModuleLoader.hpp  Object.hpp  Process.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  SpriteRenderer.hpp  Transform.hpp  Window.hpp
src/: Arch.cpp  ArchBufferPool.cpp  ArchManager.cpp  Bin.cpp  ComponentManager.cpp  Engine.cpp  EventManager.cpp  GameObject.cpp  GameObjectManager.cpp  Logger.cpp  RenderSystem.cpp  Renderer.cpp  Resource.cpp  ResourceManager.cpp  Scene.cpp  SceneManager copy.cpp  SceneManager.cpp  ScriptManager.cpp  Shader.cpp  SpriteRenderer.cpp  SubSystem.cpp  TaskScheduler.cpp  Utils.cpp  Window.cpp  WindowManager.cpp  main.cpp
src/js/: Class.cpp  Console.cpp  EngineModule.cpp  EngineNamespace.cpp  Env.cpp  Format.cpp  Game.cpp  GameObject.cpp  Helpers.cpp  Material.cpp  ModuleLoader.cpp  Object.cpp  Process.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  SpriteRenderer.cpp  Transform.cpp  Window.cpp
test-game/: game.json  index.js  tsconfig.json
test-game/src/: Game.ts  Maybe.ts  Range.ts  index.ts
test-game/src/scenes/: SplashScene.ts  TestScene.ts  TestScene2.ts  TestScene3.ts
test-game/types/: Component.d.ts  Console.d.ts  Engine.d.ts  Game.d.ts  GameObject.d.ts  Material.d.ts  Renderer.d.ts  Scene.d.ts  SceneManager.d.ts  SpriteRenderer.d.ts  Transform.d.ts  Vector.d.ts  Window.d.ts  index.d.ts
